2006-12-18  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/cd/lis.conf: removed static configuration file
	* src/modules/dl/lis.conf: removed static configuration file
	* src/modules/m2pa/lis.conf: removed static configuration file
	* src/modules/m2tp/lis.conf: removed static configuration file
	* src/modules/m2ua/lis.conf: removed static configuration file
	* src/modules/m3ua/lis.conf: removed static configuration file
	* src/modules/ss7ip/lis.conf: removed static configuration file
	* src/modules/ss7sctp/lis.conf: removed static configuration file
	* src/modules/sua/lis.conf: removed static configuration file
	* src/modules/tua/lis.conf: removed static configuration file

	* src/modules/cd/lis.conf.in: added dynamic configuration file
	* src/modules/dl/lis.conf.in: added dynamic configuration file
	* src/modules/m2pa/lis.conf.in: added dynamic configuration file
	* src/modules/m2tp/lis.conf.in: added dynamic configuration file
	* src/modules/m2ua/lis.conf.in: added dynamic configuration file
	* src/modules/m3ua/lis.conf.in: added dynamic configuration file
	* src/modules/ss7ip/lis.conf.in: added dynamic configuration file
	* src/modules/ss7sctp/lis.conf.in: added dynamic configuration file
	* src/modules/sua/lis.conf.in: added dynamic configuration file
	* src/modules/tua/lis.conf.in: added dynamic configuration file

	* Makefile.am: adjusted for new packaging
	* acinclude.m4: adjusted for new packaging
	* configure.ac: adjusted for new packaging
	* doc/man/Makefile.am: separate manual pages by optional subpackage
	* lib32/Makefile.am: adjust for new packaging
	* src/include/Makefile.am: separate headers by optional subpackage
	* src/include/ss7/sdli_ioctl.h: change timer structure
	* src/modules/acb56/lis.conf: headers for release
	* src/modules/h225/lis.conf: headers for release
	* src/modules/hdlc/lis.conf: headers for release
	* src/modules/isdn/lis.conf: headers for release
	* src/modules/isup/lis.conf: headers for release