@@ -1,3 +1,7 @@
+2006-12-20  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/include/ss7/isupi_ioctl.h: cosmetic changes
+
 2006-12-18  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/modules/cd/lis.conf: removed static configuration file
